Diseño terminado y separado por clases

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Buscar" />
+        <activity android:name=".Aprender" />
+        <activity android:name=".Annadir" />
     </application>
 
 </manifest>
