Buscar Funcional, falta filtrado

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".Buscar" />
         <activity android:name=".Aprender" />
         <activity android:name=".Annadir" />
+        <activity android:name=".Filtrado" />
     </application>
 
 </manifest>
